--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "@appandflow/masonry-list",
+  "name": "@fisherwise/masonry-list",
   "version": "0.4.0",
   "main": "./src/MasonryList.js",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/AppAndFlow/react-native-masonry-list.git"
+    "url": "https://github.com/fisherwise/react-native-masonry-list.git"
   },
   "bugs": {
-    "url": "https://github.com/AppAndFlow/react-native-masonry-list.git/issues"
+    "url": "https://github.com/fisherwise/react-native-masonry-list.git/issues"
   },
   "keywords": [
     "react-native",
-    "appandflow",
     "masonry",
     "list"
   ],
@@ -21,6 +20,7 @@
   "files": [
     "/src"
   ],
+  "lint": "eslint src",
   "lint-staged": {
     "*.js": [
       "yarn prettier",
@@ -45,21 +45,25 @@
     "react": "*"
   },
   "devDependencies": {
-    "babel-preset-react-native": "^3.0.1",
-    "chalk": "^2.1.0",
-    "eslint": "^4.5.0",
-    "eslint-config-anf": "^0.5.2",
-    "eslint-config-prettier": "^2.3.0",
-    "flow-bin": "^0.53.1",
-    "glob": "^7.1.2",
-    "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "jest-expo": "^20.0.0",
-    "lint-staged": "^4.0.3",
-    "prettier": "^1.5.3",
-    "react": "16.0.0-beta.5",
-    "react-native": "janicduplessis/react-native",
-    "react-test-renderer": "16.0.0-beta.5"
+    "babel-preset-react-native": "^4.0.1",
+    "chalk": "^2.4.2",
+    "core-js": "^3.1.4",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-anf": "^0.6.2",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-native": "^3.7.0",
+    "flow-bin": "^0.102.0",
+    "glob": "^7.1.4",
+    "husky": "^3.0.0",
+    "jest": "^24.8.0",
+    "jest-expo": "^33.0.2",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
+    "react": "16.8.6",
+    "react-native": "0.60.3",
+    "react-test-renderer": "16.8.6"
   },
   "dependencies": {}
 }
