--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     ]
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "babel-preset-react-native": "^4.0.1",
@@ -52,6 +53,8 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-anf": "^0.6.2",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-native": "^3.7.0",
     "flow-bin": "^0.102.0",
